Clicking on a folder name in data libraries now expands the folder instead of displaying information/description, which is already in the name. Move fold icon next to folder name. Fix whitespace off by one

--- a/static/june_2007_style/blue/history.css
+++ b/static/june_2007_style/blue/history.css
@@ -5,10 +5,8 @@ div.historyItem{margin:5px -5px 5px 0px;padding:5px 11px 5px 5px;border:solid #8
 div.historyItem .state-icon{display:inline-block;vertical-align:middle;width:16px;height:16px;background-position:0 1px;background-repeat:no-repeat;}
 div.historyItem .historyItemTitle{font-weight:bold;line-height:16px;}
 div.historyItem div.historyItem{margin-right:-11px;}
-div.historyItem-ok{border-color:#66AA66;background:#CCFFCC;}
-div.historyItem-ok .state-icon{display:none;}
-div.historyItem-failed_metadata{border-color:#66AA66;background:#CCFFCC;}
-div.historyItem-failed_metadata .state-icon{display:none;}
+div.historyItem-ok,div.historyItem-failed_metadata{border-color:#66AA66;background:#CCFFCC;}
+div.historyItem-ok .state-icon,div.historyItem-failed_metadata .state-icon{display:none;}
 div.historyItem-error{border-color:#AA6666;background:#FFCCCC;}
 div.historyItem-error .state-icon{background:url(history-states.png) no-repeat 0px -0px;}
 div.historyItem-empty{border-color:#AA6666;background:#FFCCCC;}
